[package]
name = "boiler-programmer"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
debouncr = "0.2.2"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0-alpha.9"
esp-idf-hal = "0.39.0"
esp-idf-sys = { version = "0.31.10", features = ["binstart", "native"] }
mipidsi = "0.5.0"
rotary-encoder-embedded = "0.2.0"


[build-dependencies]
embuild = "0.30"
anyhow = "1"
